--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
             <nav class="navigation">
                 <div class="navigation-header">
                 <form action="https://echo.htmlacademy.ru" method="get" name="search" ><input type="search" name="finder" placeholder="Поиск по сайту" required /><input type="submit" value="Найти" /></form>
-                
+
                 <ul class="navigation-user">
                     <li class="navigation-item">
                         <a class="navigation-link" href="#">Войти</a>
@@ -47,33 +47,36 @@
                     </ul>
               </div>
               <div class="navigation-catalog">
-              <ul class="link-list">
-
-                <li class="link-list-item">
-                                    <a class="navigation-link" href="#">Виртуальная реальность</a>
-                </li>
-                <li class="link-list-item">
-                                    <a class="navigation-link" href="#">Моноподы для селфи</a>
-                </li>
-                <li class="link-list-item">
-                                    <a class="navigation-link" href="#">Экшн-камеры</a>
-                </li>
-                <li class="link-list-item">
-                                    <a class="navigation-link" href="#">Фитнес-браслеты</a>
-                </li>
-                <li class="link-list-item">
-                                    <a class="navigation-link" href="#">Умные часы</a>
-                </li>
-                <li class="link-list-item">
-                                    <a class="navigation-link" href="#">Квадрокоптеры</a>
-                </li>
-                </ul>
+                <ul class="link-list">
+                  <div>
+                                  <li class="link-list-item">
+                                                      <a class="navigation-link" href="#">Виртуальная реальность</a>
+                                  </li>
+                                  <li class="link-list-item">
+                                                      <a class="navigation-link" href="#">Моноподы для селфи</a>
+                                  </li>
+                                  <li class="link-list-item">
+                                                      <a class="navigation-link" href="#">Экшн-камеры</a>
+                                  </li>
+                                  </div>
+                                  <div>
+                                  <li class="link-list-item">
+                                                      <a class="navigation-link" href="#">Фитнес-браслеты</a>
+                                  </li>
+                                  <li class="link-list-item">
+                                                      <a class="navigation-link" href="#">Умные часы</a>
+                                  </li>
+                                  </div>
+                                  <li class="link-list-item">
+                                                      <a class="navigation-link" href="#">Квадрокоптеры</a>
+                                  </li>
+                                  </ul>
                 </div>
             </nav>
         </header>
         <main class="main-inner">
             <section class="inner-header">
-                <h1 class="tab-title">Моноподы для селфи</h1>
+                <h1 class="tab-title monopod">Моноподы для селфи</h1>
                 <ul class="breadcrumbs">
                     <li class="breadcrumbs-item">
                         <a class="breadcrumbs-link" href="index.html">Главная</a>
