--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </section>
             <section class="services">
                 <h2 class="visually-hidden" hidden>Услуги</h2>
-                <div class="servicse-list">
+                <div class="services-list">
                 <ol class="services-user">
                     <li class="services-item">
                         <button class="button button-services" type="button">
