--- a/catalog.html
+++ b/catalog.html
@@ -180,10 +180,10 @@
                 </form>
 
                 <a href="#" class="button button-up">
-                    <span class="visually-hidden" hidden>Сверху вниз</span>
+                    <span class="visually-hidden" >Сверху вниз</span>
                 </a>
                 <a href="#" class="button button-down">
-                    <span class="visually-hidden" hidden>Снизу вверх</span>
+                    <span class="visually-hidden" >Снизу вверх</span>
                 </a>
                 <ul class="product-list">
                     <li class="product-card">
@@ -277,9 +277,10 @@
                 </div>
             </section>
         </main>
-        <footer class="page-footer">
+         <footer class="page-footer">
+            <div class="convenience">
             <section class="footer-contacts">
-                <h2 class="visually-hidden" hidden>Контакты</h2>
+                <h2 class="visually-hidden" >Контакты</h2>
                 <a class="device-logo" href="index.html">
                     <img class="footer-contacts-logo" src="img/logo2.svg" width="145" height="36" alt="Логотип Магазин «Девайс»" />
                 </a>
@@ -309,7 +310,7 @@
                 <a class="footer-contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
             </section>
             <section class="footer-social">
-                <h2 class="page-footer-title visually-hidden" hidden>Мы в социальных сетях</h2>
+                <h2 class="page-footer-title visually-hidden" >Мы в социальных сетях</h2>
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
                         <a class="button" href="#">
@@ -331,6 +332,7 @@
             <a class="htmlacademy-link" href="https://htmlacademy.ru/">
                 <img class="footer-htmlacademy-logo" src="img/academy.svg" width="115" height="34" alt="Логотип Академии" />
             </a>
+            </div>
         </footer>
     </body>
 </html>
