--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
             </nav>
         </header>
         <main class="main-index">
-            <h1 class="visually-hidden" hidden>Магазин "Девайс"</h1>
+            <h1 class="visually-hidden" >Магазин "Девайс"</h1>
             <section class="bestsellers">
-                <h2 class="visually-hidden" hidden>Хиты продаж</h2>
+                <h2 class="visually-hidden" >Хиты продаж</h2>
 
                 <div class="product-description">
                     <div class="first-slider">
                     <img class="slider-image" src="img/slider-1.png" width="560" height="560" alt="квадрокоптер" />
                     <div class="slide-description">
-                    <h3 class="tab-title">
+                    <h3 class="tab-title slider-title">
                         Порхает как бабочка,<br />
                         жалит как пчела!
                     </h3>
@@ -103,7 +103,7 @@
                 <div class="second-slider">
                     <img class="slider-image" src="img/slider-2.png" width="560" height="560" alt="фитнес-браслет" />
                     <div class="slide-description">
-                    <h3 class="tab-title">
+                    <h3 class="tab-title slider-title">
                         Худеем<br />
                         правильно!
                     </h3>
@@ -120,7 +120,7 @@
                 <div class="third-slider">
                     <img class="slider-image" src="img/slider-3.png" width="560" height="560" alt="селфи-палка" />
                     <div class="slide-description">
-                    <h3 class="tab-title">
+                    <h3 class="tab-title slider-title">
                         Делай селфи,<br />
                         как Бен Стиллер!
                     </h3>
@@ -174,7 +174,7 @@
                 </div>
             </section>
             <section class="catalog-products">
-                <h2 class="visually-hidden" hidden>Каталог товаров</h2>
+                <h2 class="visually-hidden" >Каталог товаров</h2>
                 <ul class="catalog-list">
                     <li class="catalog-item virtual">
                         <a class="catalog-link" href="#">
@@ -195,7 +195,8 @@
                 </ul>
             </section>
             <section class="services">
-                <h2 class="visually-hidden" hidden>Услуги</h2>
+                <h2 class="visually-hidden" >Услуги</h2>
+                <div class="convenience">
                 <div class="services-list">
                 <ol class="services-user">
                     <li class="services-item">
@@ -241,9 +242,10 @@
                     </p>
                 </div>
                 </div>
+                </div>
             </section>
             <section class="advantage">
-                <span class="auto-delivery visually-hidden" >Машина</span>
+                <span class="auto-delivery">Машина</span>
                 <h2 class="order">Доставим редкий товар под заказ</h2>
                 <button class="info" type="button">
                     <span class="visually-hidden">Посмотреть дополнительную информацию</span>
@@ -251,15 +253,17 @@
             </section>
             <div class="index-columns">
             <section class="about-us">
-                <h2 class="tab-title">О нас</h2>
-                <p class="advantage-range">
+                <h2 class="tab-title title-company">О нас</h2>
+                <div class="advantage-range">
+                    <p>
                     Огромный выбор гаджетов не оставит равнодушным<br />
                     гика, который есть в каждом из нас.
                 </p>
-                <p class="advantage-delivery">
+                <p >
                     Мы можем доставить ваш товар в самые отдалённые<br />
                     уголки России транспортными компаниями:
                 </p>
+                </div>
                 <ul class="delivery-company">
                     <li class="delivery-company-item">
                         Меловые линии
@@ -274,7 +278,7 @@
                 <button class="button" type="submit">Подробнее о нас</button>
             </section>
             <section class="contacts">
-                <h2 class="tab-title">Контакты</h2>
+                <h2 class="tab-title title-company">Контакты</h2>
                 <p>
                     Вы можете забрать товар сами, заехав в наш офис.<br />
                     Заодно, сможете проверить работоспособность покупки.
@@ -294,8 +298,9 @@
             </section>
             </div>
             <section class="newsletter">
+                <div class="convenience">
                 <div class="mailing">
-                <h2 class="tab-title">Подпишитесь<br> на рассылку</h2>
+                <h2 class="tab-title title-mailing">Подпишитесь<br> на рассылку</h2>
                 <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post" name="mailing">
                     <p class="newsletter-email">
                         <label class="visually-hidden" for="newsletter-email">Email</label>
@@ -314,11 +319,13 @@
                 </p>
                 <p class="e-mail-free">Это бесплатно</p>
             </div>
+            </div>
             </section>
         </main>
         <footer class="page-footer">
+            <div class="convenience">
             <section class="footer-contacts">
-                <h2 class="visually-hidden" hidden>Контакты</h2>
+                <h2 class="visually-hidden" >Контакты</h2>
                 <a class="device-logo" href="index.html">
                     <img class="footer-contacts-logo" src="img/logo2.svg" width="145" height="36" alt="Логотип Магазин «Девайс»" />
                 </a>
@@ -348,7 +355,7 @@
                 <a class="footer-contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
             </section>
             <section class="footer-social">
-                <h2 class="page-footer-title visually-hidden" hidden>Мы в социальных сетях</h2>
+                <h2 class="page-footer-title visually-hidden" >Мы в социальных сетях</h2>
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
                         <a class="button" href="#">
@@ -370,6 +377,7 @@
             <a class="htmlacademy-link" href="https://htmlacademy.ru/">
                 <img class="footer-htmlacademy-logo" src="img/academy.svg" width="115" height="34" alt="Логотип Академии" />
             </a>
+            </div>
         </footer>
     </body>
 </html>
