--- a/catalog.html
+++ b/catalog.html
@@ -91,7 +91,7 @@
             </section>
             <section class="catalog-goods">
                 <div class="filter">
-                <h2 class="products-filter">Фильтр</h2>
+                <h2 class="products-filter">Фильтр:</h2>
                 <form class="catalog-filter" action="#" method="get" name="filter">
                     <fieldset class="catalog-filter-group">
                         <legend class="catalog-filter-title">Стоимость</legend>
@@ -277,13 +277,13 @@
                 </div>
             </section>
         </main>
-         <footer class="page-footer">
+        <footer class="page-footer">
             <div class="convenience">
-            <section class="footer-contacts">
-                <h2 class="visually-hidden" >Контакты</h2>
                 <a class="device-logo" href="index.html">
                     <img class="footer-contacts-logo" src="img/logo2.svg" width="145" height="36" alt="Логотип Магазин «Девайс»" />
                 </a>
+            <section class="footer-contacts">
+                <h2 class="visually-hidden" >Контакты</h2>
                 <address class="footer-contacts-address">
                     <p class="contacts-address-text">
                         Санкт-Петербург, набережная<br />
@@ -291,7 +291,7 @@
                     </p>
                 </address>
             </section>
-            <section class="footer-contacts">
+            <section class="footer-services">
                 <ul class="footer-navigation-services">
                     <li class="footer-navigation-item">
                         <a class="footer-navigation-link" href="#">Доставка</a>
@@ -307,24 +307,24 @@
                 </ul>
             </section>
             <section class="footer-phone">
-                <a class="footer-contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+                <a class="footer-contacts-phone" href="tel:88128121212">Тел.:+7 (812) 812-12-12</a>
             </section>
             <section class="footer-social">
                 <h2 class="page-footer-title visually-hidden" >Мы в социальных сетях</h2>
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
                         <a class="button" href="#">
-                            <span class="visually-hidden">Фейсбук</span>
+                            <span class="facebook visually-hidden">Фейсбук</span>
                         </a>
                     </li>
                     <li class="footer-social-item">
                         <a class="button" href="#">
-                            <span class="visually-hidden">Инстаграм</span>
+                            <span class="instagram visually-hidden">Инстаграм</span>
                         </a>
                     </li>
                     <li class="footer-social-item">
                         <a class="button" href="#">
-                            <span class="visually-hidden">Твиттер</span>
+                            <span class="twitter visually-hidden">Твиттер</span>
                         </a>
                     </li>
                 </ul>
