--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                         <li class="navigation-item-element">
                             <a class="navigation-element" href="#">Каталог товаров</a>
         </li>
+        <li class="navigation-item-element">
+          <a class="navigation-element visually-hidden" href="#">Раскрывающийся список</a>
+</li>
                         <li class="navigation-item-element">
                             <a class="navigation-element" href="#">Доставка</a>
                         </li>
@@ -48,30 +51,32 @@
                     </ul>
               </div>
               <div class="navigation-catalog">
+                <div>
               <ul class="link-list">
-<div>
                 <li class="link-list-item">
                                     <a class="navigation-link" href="#">Виртуальная реальность</a>
                 </li>
                 <li class="link-list-item">
-                                    <a class="navigation-link" href="#">Моноподы для селфи</a>
+                                    <a class="navigation-link" href="catalog.html">Моноподы для селфи</a>
                 </li>
                 <li class="link-list-item">
                                     <a class="navigation-link" href="#">Экшн-камеры</a>
                 </li>
+              </ul>
                 </div>
                 <div>
+                  <ul class="link-list">
                 <li class="link-list-item">
                                     <a class="navigation-link" href="#">Фитнес-браслеты</a>
                 </li>
                 <li class="link-list-item">
                                     <a class="navigation-link" href="#">Умные часы</a>
                 </li>
+                  </ul>
                 </div>
-                <li class="link-list-item">
+                <div>
                                     <a class="navigation-link" href="#">Квадрокоптеры</a>
-                </li>
-                </ul>
+                </div>
                 </div>
             </nav>
         </header>
@@ -183,7 +188,7 @@
                         </a>
                     </li>
                     <li class="catalog-item monopods">
-                        <a class="catalog-link" href="#">
+                        <a class="catalog-link" href="catalog.html">
                             Моноподы <br />
                             для селфи
                         </a>
