--- a/index.html
+++ b/index.html
@@ -14,18 +14,32 @@
             </a>
             <nav class="navigation">
                 <div class="navigation-header">
-                    <form action="https://echo.htmlacademy.ru" method="get" name="search"><input type="search" name="finder" placeholder="Поиск по сайту" required /><input type="submit" value="Найти" /></form>
-                    <ul class="navigation-user">
+                    <form action="https://echo.htmlacademy.ru" method="get" name="search">
+                        <button type="submit">
+                            <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m15.7 14.3-3.1-3.1A7 7 0 0 0 7 0a7 7 0 0 0-7 7 7 7 0 0 0 11.2 5.6l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1a1 1 0 0 0-.3-.7ZM2 7a5 5 0 0 1 5-5 5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5Z" fill="#000"/></svg>
+                        </button>
+                        <input type="search" name="finder" placeholder="Поиск по сайту" required />
+                    </form>
+                        <ul class="navigation-user">
                         <li class="navigation-item">
-                            <a class="navigation-link" href="#">Войти</a>
+                            <a class="navigation-link" href="#">
+                                <svg class="navigation-icon" width="13" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 12h13a6.3 6.3 0 0 0-4.7-5.5c1-.6 1.7-1.7 1.7-3C10 1.6 8.4 0 6.5 0A3.5 3.5 0 0 0 3 3.5c0 1.3.7 2.4 1.7 3A6.3 6.3 0 0 0 0 12Z" fill="#000"/></svg>
+                                Войти
+                            </a>
                         </li>
 
                         <li class="navigation-item">
-                            <a class="navigation-link" href="#">Сравнить</a>
+                            <a class="navigation-link" href="#">
+                                <svg class="navigation-icon" width="10" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 0H4v12h2V0ZM2 4H0v8h2V4ZM10 3H8v9h2V3Z" fill="#000"/></svg>
+                                Сравнить
+                            </a>
                         </li>
 
                         <li class="navigation-item">
-                            <a class="navigation-link" href="#">Корзина</a>
+                            <a class="navigation-link" href="#">
+                                <svg class="navigation-icon" width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z" fill="#000"/></svg>
+                                Корзина
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -33,9 +47,6 @@
                     <ul class="navigation-services">
                         <li class="navigation-item-element">
                             <a class="navigation-element" href="#">Каталог товаров</a>
-                        </li>
-                        <li class="navigation-item-element">
-                            <a class="navigation-element visually-hidden" href="#">Раскрывающийся список</a>
                         </li>
                         <li class="navigation-item-element">
                             <a class="navigation-element" href="#">Доставка</a>
@@ -171,65 +182,63 @@
             <section class="catalog-products">
                 <h2 class="visually-hidden">Каталог товаров</h2>
                 <ul class="catalog-list">
-                    <li class="catalog-item virtual">
+                    <li class="catalog-item ">
                         <a class="catalog-link" href="#">
-                            Виртуальная <br />
-                            реальность
+                            Виртуальная реальность
                         </a>
                     </li>
-                    <li class="catalog-item monopods">
+                    <li class="catalog-item ">
                         <a class="catalog-link" href="catalog.html">
-                            Моноподы <br />
-                            для селфи
+                            Моноподы для селфи
                         </a>
                     </li>
-                    <li class="catalog-item cameras"><a class="catalog-link" href="#">Экшн-камеры</a></li>
-                    <li class="catalog-item fitness"><a class="catalog-link" href="#">Фитнесс-браслеты</a></li>
-                    <li class="catalog-item watch"><a class="catalog-link" href="#">Умные часы</a></li>
-                    <li class="catalog-item quadrocopters"><a class="catalog-link" href="#">Квадрокоптеры</a></li>
+                    <li class="catalog-item "><a class="catalog-link" href="#">Экшн-камеры</a></li>
+                    <li class="catalog-item "><a class="catalog-link" href="#">Фитнесс-браслеты</a></li>
+                    <li class="catalog-item "><a class="catalog-link" href="#">Умные часы</a></li>
+                    <li class="catalog-item "><a class="catalog-link" href="#">Квадрокоптеры</a></li>
                 </ul>
             </section>
             <section class="services">
                 <h2 class="visually-hidden">Услуги</h2>
                 <div class="convenience">
                     <div class="services-list">
-                        <ol class="services-user">
+                        <ul class="services-user">
                             <li class="services-item">
-                                <button class="button button-services" type="button">
+                                <button class="button button-detail" type="button">
                                     Доставка
                                 </button>
                             </li>
                             <li class="services-item">
-                                <button class="button button-services" type="button">
+                                <button class="button button-detail" type="button">
                                     Гарантия
                                 </button>
                             </li>
                             <li class="services-item">
-                                <button class="button button-services" type="button">
+                                <button class="button button-detail" type="button">
                                     Кредит
                                 </button>
                             </li>
                         </ol>
                     </div>
                     <div class="description-list">
-                        <div class="delivery">
-                            <h3 class="tab-title">Доставка</h3>
+                        <div class="services-description delivery">
+                            <h3 class="tab-title ">Доставка</h3>
                             <p class="tab-paragraph">
                                 Мы с удовольствием доставим ваш товар прямо<br />
                                 к вашему подъезду совершенно бесплатно! Ведь<br />
                                 мы неплохо заработаем, поднимая его на ваш этаж.
                             </p>
                         </div>
-                        <div class="garanty">
-                            <h3 class="tab-title">Гарантия</h3>
+                        <div class="services-description garanty">
+                            <h3 class="tab-title ">Гарантия</h3>
                             <p class="tab-paragraph">
                                 Если из-за возгорания купленного у нас товара у вас<br />
                                 сгорит дом — не переживайте, мы выдадим вам новый.<br />
                                 Товар, не дом, конечно же.
                             </p>
                         </div>
-                        <div class="credit">
-                            <h3 class="tab-title">Кредит</h3>
+                        <div class="services-description credit">
+                            <h3 class="tab-title ">Кредит</h3>
                             <p class="tab-paragraph">
                                 Залезть в долговую яму стало проще! Кредитные<br />
                                 консультанты подберут для вас наиболее выгодные<br />
@@ -240,7 +249,7 @@
                 </div>
             </section>
             <section class="advantage">
-                <span class="auto-delivery">Машина</span>
+                <span class="auto-delivery"></span>
                 <h2 class="order">Доставим редкий товар под заказ</h2>
                 <button class="info" type="button">
                     <span class="visually-hidden">Посмотреть дополнительную информацию</span>
@@ -270,7 +279,7 @@
                             ТоксБерри
                         </li>
                     </ul>
-                    <button class="button" type="submit">Подробнее о нас</button>
+                    <button class="button button-detail" type="submit">Подробнее о нас</button>
                 </section>
                 <section class="contacts">
                     <h2 class="tab-title title-company">Контакты</h2>
@@ -289,7 +298,7 @@
                         <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
                     </ul>
 
-                    <button class="button button-feedback" type="submit">Напишите нам</button>
+                    <button class="button button-detail" type="submit">Напишите нам</button>
                 </section>
             </div>
             <section class="newsletter">
