--- a/index.html
+++ b/index.html
@@ -361,18 +361,18 @@
                     <h2 class="page-footer-title visually-hidden">Мы в социальных сетях</h2>
                     <ul class="footer-social-list">
                         <li class="footer-social-item">
-                            <a class="button" href="#">
-                                <span class="facebook visually-hidden">Фейсбук</span>
+                            <a class="footer-social-link facebook" href="#">
+                                <span class="visually-hidden">Фейсбук</span>
                             </a>
                         </li>
                         <li class="footer-social-item">
-                            <a class="button" href="#">
-                                <span class="instagram visually-hidden">Инстаграм</span>
+                            <a class="footer-social-link instagram " href="#">
+                                <span class="visually-hidden">Инстаграм</span>
                             </a>
                         </li>
                         <li class="footer-social-item">
-                            <a class="button" href="#">
-                                <span class="twitter visually-hidden">Твиттер</span>
+                            <a class="footer-social-link twitter " href="#">
+                                <span class="visually-hidden">Твиттер</span>
                             </a>
                         </li>
                     </ul>
