--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 Сравнить
                             </a>
                         </li>
-
+                        <span class="quantity">2</span>
                         <li class="navigation-item">
                             <a class="navigation-link" href="#">
                                 <svg class="navigation-icon" width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z" fill="#000"/></svg>
@@ -176,7 +176,7 @@
                             </button>
                         </li>
                     </ol>
-                    <button class="button button-detail" type="submit">Подробнее</button>
+                    <button class="button slider-button" type="submit">Подробнее</button>
                 </div>
             </section>
             <section class="catalog-products">
@@ -279,7 +279,7 @@
                             ТоксБерри
                         </li>
                     </ul>
-                    <button class="button button-detail" type="submit">Подробнее о нас</button>
+                    <button class="button button-about" type="submit">Подробнее о нас</button>
                 </section>
                 <section class="contacts">
                     <h2 class="tab-title title-company">Контакты</h2>
@@ -298,7 +298,7 @@
                         <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
                     </ul>
 
-                    <button class="button button-detail" type="submit">Напишите нам</button>
+                    <button class="button button-about" type="submit">Напишите нам</button>
                 </section>
             </div>
             <section class="newsletter">
