--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
             </a>
             <nav class="navigation">
                 <div class="navigation-header">
-                    <form action="https://echo.htmlacademy.ru" method="get" name="search">
-                        <button type="submit">
-                            <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m15.7 14.3-3.1-3.1A7 7 0 0 0 7 0a7 7 0 0 0-7 7 7 7 0 0 0 11.2 5.6l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1a1 1 0 0 0-.3-.7ZM2 7a5 5 0 0 1 5-5 5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5Z" fill="#000"/></svg>
-                        </button>
-                        <input type="search" name="finder" placeholder="Поиск по сайту" required />
+                    <form class="search-line" action="https://echo.htmlacademy.ru" method="get" name="search">
+                        <input type="search" name="finder" placeholder="Поиск по сайту" required autocomplete="off"/>
+                        <button class="button-search" type="submit">Найти</button>
                     </form>
                         <ul class="navigation-user">
                         <li class="navigation-item">
@@ -362,7 +360,7 @@
                     <ul class="footer-social-list">
                         <li class="footer-social-item">
                             <a class="footer-social-link facebook" href="#">
-                              <svg class="footer-social-icon" width="9" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6.5 3H9V0H5.6C2.8 0 2 1.7 2 4.2V6H0v3h2v9h3V9h3.3l.6-3H5V4.5C5 3.7 5.3 3 6.5 3Z" fill="#444"/></svg>
+                              <svg class="footer-social-icon" width="9" height="18"  xmlns="http://www.w3.org/2000/svg"><path d="M6.5 3H9V0H5.6C2.8 0 2 1.7 2 4.2V6H0v3h2v9h3V9h3.3l.6-3H5V4.5C5 3.7 5.3 3 6.5 3Z" fill="#444"/></svg>
                                 <span class="visually-hidden">Фейсбук</span>
                             </a>
                         </li>
