--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav class="navigation">
                 <div class="navigation-header">
                     <form class="search-line" action="https://echo.htmlacademy.ru" method="get" name="search">
-                        <input type="search" name="finder" placeholder="Поиск по сайту" required autocomplete="off"/>
+                        <input class="header-search" type="search" name="finder" placeholder="Поиск по сайту" required autocomplete="off"/>
                         <button class="button-search" type="submit">Найти</button>
                     </form>
                         <ul class="navigation-user">
@@ -302,24 +302,24 @@
             <section class="newsletter">
                 <div class="subscription">
                     <h2 class="tab-title title-mailing">
-                        Подпишитесь<br />
-                        на рассылку
+                        Подпишитесь на рассылку
                     </h2>
                     <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post" name="mailing">
                         <p class="newsletter-email">
                             <label class="visually-hidden" for="newsletter-email">Email</label>
                             <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required />
                         </p>
-                    </form>
+
                     <button class="button newsletter-button" type="submit">
                         Подписаться
                     </button>
+                  </form>
                     <p class="e-mail-advantage">
                         Еженедельный дайджест с обзорами новинок,<br />
                         длительными тест-драйвами, распаковками, а также акции,<br />
                         спецпредложения и вот это вот всё.
                     </p>
-                    <p class="e-mail-free">Это бесплатно</p>
+                    <!-- <p class="e-mail-free">Это бесплатно</p> -->
                 </div>
             </section>
         </main>
