--- a/catalog.html
+++ b/catalog.html
@@ -13,21 +13,37 @@
             </a>
             <nav class="navigation">
                 <div class="navigation-header">
-                    <form action="https://echo.htmlacademy.ru" method="get" name="search"><input type="search" name="finder" placeholder="Поиск по сайту" required /><input type="submit" value="Найти" /></form>
+                    <form class="search-line" action="https://echo.htmlacademy.ru" method="get" name="search">
+                        <input class="header-search" type="search" name="finder" placeholder="Поиск по сайту" required autocomplete="off" />
+                        <button class="button-search" type="submit">Найти</button>
+                    </form>
                     <ul class="navigation-user">
                         <li class="navigation-item">
-                            <a class="navigation-link" href="#">Коля Петухов</a>
-                        </li>
-                        <li class="navigation-item">
-                            <a class="navigation-link" href="#">Выйти</a>
-                        </li>
-
-                        <li class="navigation-item">
-                            <a class="navigation-link" href="#">Сравнить</a>
+                            <a class="navigation-link" href="#">
+                                <svg class="navigation-icon" width="13" height="12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0 12h13a6.3 6.3 0 0 0-4.7-5.5c1-.6 1.7-1.7 1.7-3C10 1.6 8.4 0 6.5 0A3.5 3.5 0 0 0 3 3.5c0 1.3.7 2.4 1.7 3A6.3 6.3 0 0 0 0 12Z" fill="#000" />
+                                </svg>
+                                Войти
+                            </a>
                         </li>
 
                         <li class="navigation-item">
-                            <a class="navigation-link" href="#">Корзина</a>
+                            <a class="navigation-link" href="#">
+                                <svg class="navigation-icon" width="10" height="12" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 0H4v12h2V0ZM2 4H0v8h2V4ZM10 3H8v9h2V3Z" fill="#000" /></svg>
+                                Сравнить
+                            </a>
+                        </li>
+                        <li class="quantity">2</li>
+                        <li class="navigation-item">
+                            <a class="navigation-link" href="#">
+                                <svg class="navigation-icon" width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z"
+                                        fill="#000"
+                                    />
+                                </svg>
+                                Корзина
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -35,9 +51,6 @@
                     <ul class="navigation-services">
                         <li class="navigation-item-element">
                             <a class="navigation-element" href="#">Каталог товаров</a>
-                        </li>
-                        <li class="navigation-item-element">
-                            <a class="navigation-element visually-hidden" href="#">Раскрывающийся список</a>
                         </li>
                         <li class="navigation-item-element">
                             <a class="navigation-element" href="#">Доставка</a>
@@ -297,8 +310,7 @@
                     <h2 class="visually-hidden">Контакты</h2>
                     <address class="footer-contacts-address">
                         <p class="contacts-address-text">
-                            Санкт-Петербург, набережная<br />
-                            реки Карповки, 5, литера П.
+                            Санкт-Петербург, набережная реки Карповки, 5, литера П.
                         </p>
                     </address>
                 </section>
@@ -324,24 +336,70 @@
                     <h2 class="page-footer-title visually-hidden">Мы в социальных сетях</h2>
                     <ul class="footer-social-list">
                         <li class="footer-social-item">
-                            <a class="button" href="#">
-                                <span class="facebook visually-hidden">Фейсбук</span>
+                            <a class="footer-social-link facebook" href="#">
+                                <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="9" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.5 3H9V0H5.6C2.8 0 2 1.7 2 4.2V6H0v3h2v9h3V9h3.3l.6-3H5V4.5C5 3.7 5.3 3 6.5 3Z" />
+                                </svg>
+                                <span class="visually-hidden">Фейсбук</span>
                             </a>
                         </li>
                         <li class="footer-social-item">
-                            <a class="button" href="#">
-                                <span class="instagram visually-hidden">Инстаграм</span>
+                            <a class="footer-social-link instagram" href="#">
+                                <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z" />
+                                    <path
+                                        d="M14.7 1.3c-.9-.9-2-1.3-3.4-1.3H4.7A4.5 4.5 0 0 0 0 4.7v6.6c0 1.4.4 2.6 1.4 3.4.9.9 2 1.3 3.3 1.3h6.6c1.4 0 2.6-.4 3.4-1.3a5 5 0 0 0 1.3-3.4V4.7c0-1.4-.4-2.6-1.3-3.4ZM8 12.1A4.1 4.1 0 0 1 3.9 8c0-2.3 1.9-4.1 4.1-4.1 2.2 0 4.1 1.8 4.1 4.1s-1.9 4.1-4.1 4.1Zm4.6-7.4c-.7 0-1.3-.5-1.3-1.3s.5-1.3 1.3-1.3c.7 0 1.3.6 1.3 1.3 0 .7-.6 1.3-1.3 1.3Z"
+                                    />
+                                </svg>
+                                <span class="visually-hidden">Инстаграм</span>
                             </a>
                         </li>
                         <li class="footer-social-item">
-                            <a class="button" href="#">
-                                <span class="twitter visually-hidden">Твиттер</span>
+                            <a class="footer-social-link twitter" href="#">
+                                <svg class="footer-social-icon" aria-hidden="true" focusable="false" width="15" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#a)">
+                                        <path
+                                            d="M9.7.1c1.5-.5 2.6.3 3.2 1.1l1.7-.6a2 2 0 0 1-.8 1.6c.7.2 1.2-.4 1.2-.4-.1.9-.9 1.7-1.4 1.9-.2 6.3-2.8 10.4-8.9 10.3h-.4C4 14 .6 13.6 0 12.2c2 .2 3.4-.4 4.1-1.1-.8-.3-2.4-.4-2.6-2.8.3.2.5.3 1.1.2C1.5 7.7.3 7 .4 5c.3.3.9.5 1.2.4C1 5.2-.2 2.3.8.8c1.6 1.7 3.3 3.4 6.3 3.5.2-2.1 1-3.5 2.6-4.2Z"
+                                        />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="a"><path fill="#fff" d="M0 0h15v14H0z" /></clipPath>
+                                    </defs>
+                                </svg>
+                                <span class="visually-hidden">Твиттер</span>
                             </a>
                         </li>
                     </ul>
                 </section>
                 <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-                    <img class="footer-htmlacademy-logo" src="img/academy.svg" width="115" height="34" alt="Логотип Академии" />
+                    <svg class="navigation-academy" width="115" height="33" viewBox="0 0 115 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 12.8999V15.4999H2.5V12.8999H0Z" />
+                        <path d="M11.6 4.5C10 4.5 8.80002 5.2 8.00002 6.2H7.90002V0H5.90002V15.5H7.90002V10.2C7.90002 8.1 9.20002 6.6 11.2 6.6C13 6.6 14.1 8 14.1 9.8V15.5H16.1V9.4C16.2 6.4 14.3 4.5 11.6 4.5Z" />
+                        <path d="M26.6 4.8001H21.8V1.1001H19.8V4.9001H17.9V6.9001H19.8V12.9001C19.8 14.6001 20.8 15.6001 22.5 15.6001H26.6V13.6001H22.9C22.2 13.6001 21.8 13.2001 21.8 12.5001V6.8001H26.6V4.8001Z" />
+                        <path
+                            d="M41.1 4.6001C39.5 4.6001 38.2 5.4001 37.6 6.7001H37.5C36.9 5.5001 35.7 4.6001 34.1 4.6001C32.7 4.6001 31.6 5.4001 31 6.4001H30.9V4.8001H29V15.4001H31V10.0001C31 8.0001 32 6.5001 33.6 6.5001C35.1 6.5001 36 7.5001 36 9.1001V15.4001H38V9.8001C38 7.4001 39.4 6.5001 40.6 6.5001C42.1 6.5001 43 7.5001 43 9.1001V15.4001H45V8.9001C45.1 6.4001 43.6 4.6001 41.1 4.6001Z"
+                        />
+                        <path d="M47.8 12.7C47.8 14.4 48.8 15.4 50.6 15.4H52.6V13.4H50.9001C50.2001 13.4 49.8 13 49.8 12.3V0H47.8V12.7Z" />
+                        <path
+                            d="M28.9 19.6999C28 18.5999 26.7 17.8999 25 17.8999C21.9 17.8999 19.6 20.1999 19.6 23.4999C19.6 26.7999 21.9 29.0999 25 29.0999C26.8 29.0999 28 28.2999 28.8 27.1999H28.9V28.7999H30.9V18.1999H28.9V19.6999ZM25.3 27.0999C23.1 27.0999 21.7 25.4999 21.7 23.4999C21.7 21.4999 23.1 19.8999 25.3 19.8999C27.5 19.8999 28.9 21.4999 28.9 23.4999C28.9 25.3999 27.5 27.0999 25.3 27.0999Z"
+                        />
+                        <path
+                            d="M44.2 21.9999C43.7 19.5999 41.5999 17.8999 38.7999 17.8999C35.3999 17.8999 33.2 20.3999 33.2 23.4999C33.2 26.5999 35.3999 29.0999 38.7999 29.0999C41.5999 29.0999 43.7 27.2999 44.2 24.8999H42.0999C41.6999 26.1999 40.3999 27.1999 38.7999 27.1999C36.5999 27.1999 35.2 25.5999 35.2 23.5999C35.2 21.5999 36.5999 19.9999 38.7999 19.9999C40.3999 19.9999 41.5999 20.9999 42.0999 22.1999H44.2V21.9999Z"
+                        />
+                        <path
+                            d="M55.1 19.6999C54.2 18.5999 52.9001 17.8999 51.2001 17.8999C48.1001 17.8999 45.8 20.1999 45.8 23.4999C45.8 26.7999 48.1001 29.0999 51.2001 29.0999C53.0001 29.0999 54.2 28.2999 55 27.1999H55.1V28.7999H57.1V18.1999H55.1V19.6999ZM51.5 27.0999C49.3 27.0999 47.9001 25.4999 47.9001 23.4999C47.9001 21.4999 49.3 19.8999 51.5 19.8999C53.7 19.8999 55.1 21.4999 55.1 23.4999C55.1 25.3999 53.6 27.0999 51.5 27.0999Z"
+                        />
+                        <path
+                            d="M68.7 19.7999C67.8 18.6999 66.5 17.8999 64.8 17.8999C61.7 17.8999 59.4 20.1999 59.4 23.4999C59.4 26.7999 61.6 29.0999 64.8 29.0999C66.5 29.0999 67.8 28.2999 68.6 27.2999H68.7V28.7999H70.7V13.3999H68.7V19.7999ZM65.1 27.0999C62.9 27.0999 61.5 25.4999 61.5 23.4999C61.5 21.4999 62.9 19.8999 65.1 19.8999C67.3 19.8999 68.7 21.4999 68.7 23.4999C68.6 25.4999 67.2 27.0999 65.1 27.0999Z"
+                        />
+                        <path
+                            d="M78.3 17.8999C75 17.8999 72.8 20.3999 72.8 23.4999C72.8 26.4999 74.9 29.0999 78.3 29.0999C80.8 29.0999 82.8 27.7999 83.5 25.4999H81.4C80.9 26.4999 79.8 27.0999 78.4 27.0999C76.5 27.0999 75.1 25.7999 75 24.1999H83.8C84 20.5999 81.8 17.8999 78.3 17.8999ZM78.3 19.7999C80 19.7999 81.3 20.7999 81.6 22.3999H75.1C75.4 20.8999 76.6 19.7999 78.3 19.7999Z"
+                        />
+                        <path
+                            d="M98.2 17.8999C96.6 17.8999 95.3 18.6999 94.6 19.8999H94.5C93.9 18.6999 92.7 17.8999 91.1 17.8999C89.7 17.8999 88.6 18.5999 88 19.6999V18.1999H86.1V28.7999H88.1V23.3999C88.1 21.3999 89.1 19.9999 90.7 19.8999C92.2 19.8999 93.1 20.8999 93.1 22.4999V28.7999H95.1V23.1999C95.1 20.7999 96.5 19.8999 97.7 19.8999C99.2 19.8999 100.1 20.8999 100.1 22.4999V28.7999H102.1V22.2999C102.2 19.6999 100.7 17.8999 98.2 17.8999Z"
+                        />
+                        <path d="M109.4 27.0001L105.8 18.1001H103.6L108.4 29.7001C108.1 30.6001 107.7 30.9001 106.7 30.9001H104.2V32.9001H106.7C108.5 32.9001 109.5 32.1001 110.2 30.3001L114.9 18.1001H112.8L109.4 27.0001Z" />
+                    </svg>
                 </a>
             </div>
         </footer>
